user-skel/repos/ace/manifests/staging/simplenodeservice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplenodeservice
  labels:
    app: simplenodeservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplenodeservice
  template:
    metadata:
      labels:
        app: simplenodeservice
        version: v1
    spec:
      containers:
      - name: simplenodeservice
        image: localhost:32000/ace/simplenodeservice:1.0.0-6
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 15
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: simplenodeservice
  labels:
    app: simplenodeservice
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: simplenodeservice
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: simplenodeservice
  name: simplenodeservice
spec:
  rules:
  - host: INGRESS_DOMAIN_PLACEHOLDER
    http:
      paths:
      - backend:
          serviceName: simplenodeservice
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
